--- a/.env
+++ b/.env
@@ -23,6 +23,16 @@ APP_SECRET=fb24abc7dc5bd4bafadeb0fab7adfe1e
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://phpmyadmin:root@127.0.0.1:3306/Oaca-db?serverVersion=5.7&charset=utf8mb4"
+ DATABASE_URL="mysql://phpmyadmin:root@127.0.0.1:3306/Oaca-db?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=8a3d7d7267b98730bf7a77e4cfd48114
+###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
