--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ APP_SECRET=fb24abc7dc5bd4bafadeb0fab7adfe1e
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
- DATABASE_URL="mysql://phpmyadmin:root@127.0.0.1:3306/Oaca-db?serverVersion=5.7&charset=utf8mb4"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/Oaca-db?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
