--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
     "ext-json": "*",
     "api-platform/core": "^2.6",
     "doctrine/annotations": "^1.0",
-    "doctrine/doctrine-bundle": "^2.5",
+    "doctrine/doctrine-bundle": "^2.6",
     "doctrine/doctrine-migrations-bundle": "^3.2",
-    "doctrine/orm": "^2.11",
+    "doctrine/orm": "^2.12",
     "jms/serializer-bundle": "^4.0",
+    "lexik/jwt-authentication-bundle": "^2.15",
     "nelmio/cors-bundle": "^2.2",
     "phpdocumentor/reflection-docblock": "^5.3",
     "phpstan/phpdoc-parser": "^1.2",
@@ -26,6 +27,7 @@
     "symfony/form": "5.4.*",
     "symfony/framework-bundle": "5.4.*",
     "symfony/google-mailer": "5.4.*",
+    "symfony/http-client": "5.4.*",
     "symfony/http-kernel": "5.4.*",
     "symfony/mailer": "5.4.*",
     "symfony/mime": "5.4.*",
@@ -37,8 +39,7 @@
     "symfony/serializer": "5.4.*",
     "symfony/twig-bundle": "5.4.*",
     "symfony/validator": "5.4.*",
-    "symfony/yaml": "5.4.*",
-    "ext-http": "*"
+    "symfony/yaml": "5.4.*"
   },
   "config": {
     "allow-plugins": {
@@ -89,6 +90,6 @@
     }
   },
   "require-dev": {
-    "symfony/maker-bundle": "^1.38"
+    "symfony/maker-bundle": "^1.41"
   }
 }
