--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,23 +4,32 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app_cc_reset_password_endpoint: 'http://localhost:8005'
     rootDir: '%kernel.project_dir%'
     imgBaseDir: '/uploads/images'
     images: '%kernel.project_dir%/public%imgBaseDir%'
 services:
     # default configuration for services in *this* file
+    event.jwt_created_listener:
+        class: App\Event\Listener\JWTCreatedListener
+        arguments:
+            - "@security.token_storage"
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
+    App\Service\FileUploader:
     App\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Tests/'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
