--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "doctrine/doctrine-bundle": "^2.6",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.12",
+    "gesdinet/jwt-refresh-token-bundle": "^1.1",
     "jms/serializer-bundle": "^4.0",
     "lexik/jwt-authentication-bundle": "^2.15",
     "nelmio/cors-bundle": "^2.2",
