--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,10 +21,10 @@ security:
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
-#        refresh:
-#            pattern: ^/token/refresh
-#            stateless: true
-#            anonymous: true
+        refresh:
+            pattern: ^/token/refresh
+            stateless: true
+            anonymous: true
         api:
             pattern:   ^/api
             stateless: true
