last change email and upload file

--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ JWT_PASSPHRASE=8a3d7d7267b98730bf7a77e4cfd48114
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+MAILER_DSN=gmail+smtp://krayem.afif@gmail.com:rwsbyptfkkcbkyyi@default
+###< symfony/mailer ###
