--- a/config/packages/gesdinet_jwt_refresh_token.yaml
+++ b/config/packages/gesdinet_jwt_refresh_token.yaml
@@ -1,2 +1,4 @@
 gesdinet_jwt_refresh_token:
+    user_identity_field: email
+    user_provider: security.user.provider.concrete.app_user_provider
     refresh_token_class: App\Entity\RefreshToken # This is the class name of the refresh token, you will need to adjust this to match the class your application will use
